--- a/sim.html
+++ b/sim.html
@@ -1104,8 +1104,8 @@ els.hasil.innerHTML = `<div id="multiplier-breakdown" class="multiplier-breakdow
     = &#215;${state.mult.toFixed(2)}
   </p>
   <blockquote class="noted">
-    Only base multipliers! Real output depends on class, skills, buffs, and more.<br/>
-    More accurate? Just use job sims.
+    Only base multipliers, calculated with target DEF = 0. Real output depends on class, skills, buffs, and more.<br/>
+More accurate? Use job sims!
   </blockquote>
   <blockquote class="noted">In the table, an upward arrow means higher than your stat, a square means roughly equal (±6%), and a downward arrow means lower.
 </blockquote></div>
