--- a/sim.html
+++ b/sim.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>Alt-Sim</title>
-  <meta name="description" content="Calc base multiplier and randomize stats for better results."/>
+  <meta name="description" content="Calc base multiplier and randomize around your stats for better results."/>
   <style>/* Reset */
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
 :root{
