--- a/sim.html
+++ b/sim.html
@@ -797,9 +797,9 @@ const weaponSizeModifier = {
 };
 const defTable = {
   "0def": { def: 0, dmgred: 0 },
-  "130boss": { def: 220 , dmgred:170 },
-  "140boss": { def: 250, dmgred: 210 },
-  "150boss": { def: 360, dmgred: 300 }
+  /*"130boss": { def: 120, dmgred:170 },*/
+  "140boss": { def: 140, dmgred: 200 },
+  "150boss": { def: 175, dmgred: 300 }
 };
 const raceTypes = [
   "Angel","Demon","Formless","Insect","Fish",
