--- a/sim.html
+++ b/sim.html
@@ -4397,7 +4397,7 @@ function validateStatsVsTarget(state, focusedElement = null) {
     ValidationSSoT.checkStatsAfterThresholdChange();
   }
   
-  return true;
+  return result.isValid;
 }
 
 // ========== SAFE STATS SYSTEM ==========
